2.91 Image Editor Quick Smoke (Fire) Pure Emission is displayed as (1.0, 1.0, 1.0) even when the actual values are 5 orders of magnitude lower. #80787

Closed
opened 2020-09-14 21:46:09 +02:00 by Evan Wilson · 6 comments
Member

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-14 18:55, hash: f7829787da Tested first on the night of 2020-09-11 with the same results, not sure of the hash, but it was after the DrawManager merge.
Worked: presumably before d6525e8d13

Short description of error
2.91 Image Editor Quick Smoke (Fire) Pure Emission is displayed as (1.0, 1.0, 1.0) even when the actual values are 5 orders of magnitude lower.

Exact steps for others to reproduce the error
Factory startup.
Render set to Cycles.
Film->Transparent
Add Quick Smoke to the default cube.
Switch it to Fire and Smoke
Set cache type to All
Bake All
Go to a frame like 100
F12 Render

Using the attached .blend you just have to press Bake All and then F12 to render.
quick_smoke_alpha_test_v2.blend

quick_smoke_alpha_test_v2.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-14 18:55, hash: `f7829787da` Tested first on the night of 2020-09-11 with the same results, not sure of the hash, but it was after the DrawManager merge. Worked: presumably before d6525e8d13 **Short description of error** 2.91 Image Editor Quick Smoke (Fire) Pure Emission is displayed as (1.0, 1.0, 1.0) even when the actual values are 5 orders of magnitude lower. **Exact steps for others to reproduce the error** Factory startup. Render set to Cycles. Film->Transparent Add `Quick Smoke` to the default cube. Switch it to `Fire and Smoke` Set cache type to `All` Bake All Go to a frame like 100 F12 Render Using the attached .blend you just have to press `Bake All` and then F12 to render. [quick_smoke_alpha_test_v2.blend](https://archive.blender.org/developer/F8879821/quick_smoke_alpha_test_v2.blend) ![quick_smoke_alpha_test_v2.png](https://archive.blender.org/developer/F8879822/quick_smoke_alpha_test_v2.png)
Author
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2020-09-15 15:26:28 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report!

Seems like to be related to the texture interpolation. We should not interpolate the texture sampling. During my test the whiteness disappears when zooming in.

Thanks for the report! Seems like to be related to the texture interpolation. We should not interpolate the texture sampling. During my test the whiteness disappears when zooming in.

This issue was referenced by dedd9ce0aa

This issue was referenced by dedd9ce0aa17fb733c8b1c51b072555fcc4f2fd1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80787
No description provided.